# opentelemetry-cli

./: Cargo.toml  Makefile.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/cli/: export.rs  mod.rs
src/cli/export/: log.rs  metrics.rs
src/otlp/: grpc.rs
