[package]
name = "opentelemetry-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenTelemetry utility cli"
repository = "https://github.com/ymgyt/opentelemetry-cli"
readme = "README.md"
keywords = ["opentelemetry", "cli"]

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
clap = { version = "4.4.6", features  = ["derive", "wrap_help"] }
opentelemetry-proto = { version = "0.3.0", features = ["gen-tonic","gen-tonic-messages", "metrics"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
# Same version with opentelemetry-proto
tonic = "0.9.0"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["smallvec", "fmt", "ansi", "std", "env-filter", "time"], default-features = false }
